Fix vertical align

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -632,6 +632,7 @@
   @media (max-width: 625px) {
     .agenda .talk-title a, .agenda .name a, .agenda .time {
       font-size: .9rem;
+      vertical-align: top;
     }
     #left-blob-1, #left-blob-2, #left-blob-3 {
       top: -520px;
